# Deep-ResearcherV2

./: .gitignore
MCP_Tools_Server/: .gitignore  TOOLS.md  main.py  pyproject.toml
MCP_Tools_Server/src/: __init__.py
MCP_Tools_Server/src/tools/: doc_reader.py  image_search.py  understand_image.py  youtube_search.py
MCP_Tools_Server/src/web/: scraper.py  search_urls.py  web_crawler.py
MCP_Tools_Server/utils/task_scheduler/: queue.py
backend/: .gitignore  API.md  main.py  migrations.py  pyproject.toml  server.py  test_stress.py
backend/idea/: Ideas.md  UTIL.PORTS  architecture.excalidraw  stress_testing_docs.md  use.MODELS
backend/main/apis/bucket/: bucket_urls.py
backend/main/apis/chats/: chat_urls.py
backend/main/apis/database/: database_urls.py
backend/main/apis/history/: history_urls.py
backend/main/apis/models/: chats.py  database.py  history.py  research.py  research_static.py  settings.py  workspaces.py
backend/main/apis/reasearch/: research_urls.py
backend/main/apis/research_static/: __init__.py  research_static_urls.py
backend/main/apis/search/: search_utls.py
backend/main/apis/workspace/: workspace_urls.py
backend/main/secrets/: DRSecrets.py
backend/main/src/bucket/: bucket_orchestrator.py
backend/main/src/chat/: agent_service.py  attachment_service.py  chat_orchestrator.py  chat_service.py  rag_service.py  router.py  websocket_handler.py
backend/main/src/database/: database_orchestrator.py
backend/main/sse/: wss.py
backend/tests/: OllamaTest.py  agents-test.html  mcp_ping.py  ollama_mcp_cli.py  se_vector_test_piy.py
(+126 files in other folders)
