[project]
name = "mcp-tools-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crawl4ai>=0.8.6",
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.0",
    "ollama>=0.6.1",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.3.17",
    "fastapi>=0.136.0",
]
